src/CAPS/include/capsTypes.h

#define CAPSLONG unsigned long long
#define false 0
#define true  (!false)
#define CAPSLONG unsigned long
#define CAPSMAGIC     1234321
enum capsoType   {BODIES=-2, ATTRIBUTES, UNUSED, PROBLEM, VALUE, ANALYSIS,
                  BOUND, VERTEXSET, DATASET};
enum capssType   {NONE, STATIC, PARAMETRIC, GEOMETRYIN, GEOMETRYOUT, BRANCH,
                  PARAMETER, USER, ANALYSISIN, ANALYSISOUT, CONNECTED,
                  UNCONNECTED};
enum capsBoolean {False=false, True=true};
enum capsvType   {Boolean, Integer, Double, String, Tuple, Value};
enum capsFixed   {Change, Fixed};
enum capsNull    {NotAllowed, NotNull, IsNull};
enum capstMethod {Copy, Integrate, Average};
enum capsdMethod {BuiltIn, Sensitivity, Analysis, Interpolate, Conserve, User};
enum capsState   {MultipleError=-2, Open, Empty, Single, Multiple};
typedef struct {
  char *name;                   
  char *value;                  
} capsTuple;
typedef struct {
  char      *pname;             
  char      *pID;               
  char      *user;              
  short     datetime[6];        
  CAPSLONG  sNum;               
} capsOwn;
typedef struct {
  int    nref;                  
  int    ndata;                 
  int    nmat;                  
  int    ntri;                  
  double *gst;                  
  double *dst;                  
  double *matst;                
  int    *tris;                 
} capsEleType;
typedef struct {
  int   bIndex;                 
  int   tIndex;                 
  int   eIndex;                 
  int   *gIndices;              
  int   *dIndices;              
  union {
    int tq[2];                  
    int *poly;                  
  } eTris;                      
} capsElement;
typedef struct {
  int         dim;              
  int         instance;         
  void        *aInfo;           
  int         nPoints;          
  int         *mapping;         
  int         nVerts;           
  double      *verts;           
  int         *celem;           
  int         nTypes;           
  capsEleType *types;           
  int         nElems;           
  capsElement *elems;           
  int         nDtris;           
  int         *dtris;           
  void        *ptrm;            
} capsDiscr;
typedef struct capsObject {
  int     magicnumber;          
  int     type;                 
  int     subtype;              
  int     sn;                   
  char    *name;                
  egAttrs *attrs;               
  void    *blind;               
  capsOwn last;                 
  struct  capsObject *parent;
} capsObject;
typedef struct capsObject* capsObj;
typedef struct {
  capsObject *errObj;           
  int        index;             
  int        nLines;            
  char       **lines;           
} capsError;
typedef struct {
  int       nError;             
  capsError *errors;            
} capsErrs;
typedef struct {
  int          type;            
  int          length;          
  int          dim;             
  int          nrow;            
  int          ncol;            
  int          lfixed;          
  int          sfixed;          
  int          nullVal;         
  int          pIndex;          
  union {
    int        integer;         
    int        *integers;       
    double     real;            
    double     *reals;          
    char       *string;         
    capsTuple  *tuple;          
    capsObject *object;         
    capsObject **objects;       
  } vals;
  union {
    int        ilims[2];        
    double     dlims[2];        
  } limits;
  char         *units;          
  capsObject   *link;           
  int          linkMethod;      
} capsValue;
typedef struct {
  int   aim_nAnal;
  char *aimName[MAXANAL];
  DLL   aimDLL[MAXANAL];
  aimI  aimInit[MAXANAL];
  aimD  aimDiscr[MAXANAL];
  aimF  aimFreeD[MAXANAL];
  aimL  aimLoc[MAXANAL];
  aimIn aimInput[MAXANAL];
  aimU  aimUsesDS[MAXANAL];
  aimA  aimPAnal[MAXANAL];
  aimPo aimPost[MAXANAL];
  aimO  aimOutput[MAXANAL];
  aimC  aimCalc[MAXANAL];
  aimT  aimXfer[MAXANAL];
  aimP  aimIntrp[MAXANAL];
  aimP  aimIntrpBar[MAXANAL];
  aimG  aimIntgr[MAXANAL];
  aimG  aimIntgrBar[MAXANAL];
  aimDa aimData[MAXANAL];
  aimBd aimBdoor[MAXANAL];
  aimCU aimClean[MAXANAL];
} aimContext;
typedef struct {
  char       **signature;
  ego        context;            
  void       *utsystem;          
  aimContext aimFPTR;            
  char       *pfile;             
  char       *filename;          
  char       *file;              
  CAPSLONG   fileLen;            
  capsOwn    writer;             
  int        outLevel;		 
  void       *modl;              
  int        nParam;             
  capsObject **params;           
  int        nBranch;            
  capsObject **branchs;          
  int        nGeomIn;            
  capsObject **geomIn;           
  int        nGeomOut;           
  capsObject **geomOut;          
  int        nAnalysis;          
  capsObject **analysis;         
  int        nBound;             
  capsObject **bounds;           
  capsOwn    geometry;           
  int        nBodies;            
  ego        *bodies;            
  char       **lunits;           
  CAPSLONG   sNum;               
} capsProblem;
typedef struct {
  int         magicnumber;     
  int         pIndex;          
  int         irow;            
  int         icol;            
  capsProblem *problem;        
  void        *analysis;       
} aimInfo;
typedef struct {
  char       *loadName;         
  char       *path;             
  char       *unitSys;          
  int        instance;          
  int        eFlag;             
  char       *intents;          
  aimInfo    info;              
  int        nField;            
  char       **fields;          
  int        *ranks;            
  int        nAnalysisIn;       
  capsObject **analysisIn;      
  int        nAnalysisOut;      
  capsObject **analysisOut;     
  int        nParent;           
  capsObject **parents;         
  int        nBody;             
  ego        *bodies;           
  capsOwn    pre;               
} capsAnalysis;